...
          title: "Home",
        }}
      />
      <Tabs.Screen
        name="recipes"
        options={{
          title: "Recipes",
        }}
      />
      <Tabs.Screen
        name="meal-plan"
        options={{
          title: "Plan",
...
